# GenerateAgents.md

./: AGENTS.md  README.md  main.py  model_config.py  modules.py  pyproject.toml  requirements.txt  signatures.py  utils.py
projects/click/: AGENTS.md
projects/dspy/: AGENTS.md
projects/fastapi/: AGENTS.md
projects/flagsmith/: AGENTS.md
projects/flask/: AGENTS.md  AGENTS_comprehensive.md
src/autogenerateagentsmd/: cli.py  model_config.py  modules.py  signatures.py  utils.py
tests/: conftest.py  test_analyze_git_history.py  test_cli.py  test_e2e_pipeline.py  test_incremental_updates.py  test_model_config.py
